--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -16,6 +16,114 @@
   </div>
 </div> -->
 
+<div class="card clearfix" data-score="55" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VY5SQh"><img src="https://m.media-amazon.com/images/I/81MoIq5mosL._AC_UL320_.jpg" alt="Contigo Couture Vacuum" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VY5SQh">Contigo Couture Vacuum-Insulated Stainless Steel Water Bottle, 20 oz, Blue Slate</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.99</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VY5SQh">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="43.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M7cvLG"><img src="https://m.media-amazon.com/images/I/71jwlmzKszL._AC_UL320_.jpg" alt="Cuisinart 733-30H Chef's Classic Stainless" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M7cvLG">Cuisinart 733-30H Chef's Classic Stainless 5-1/2-Quart Saute Pan with Helper Handle and Cover</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$43.99</span><span class="ori_price">$140.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M7cvLG">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="67" data-price="91.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VQBOks"><img src="https://m.media-amazon.com/images/I/61scITXrnbL._AC_UL320_.jpg" alt="Air Purifier" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>67% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VQBOks">Envion Therapure TPP240-M UV Germicidal Hemispheric HEPA Type Tower Air Purifier, 343 Sq Ft Capacity | Removes Odors, Smoke, Mold, Pet Dander, And More!</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$91.99</span><span class="ori_price">$279.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VQBOks">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="68" data-price="13.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M9zkhL"><img src="https://m.media-amazon.com/images/I/61L-URdd1WL._AC_UL320_.jpg" alt="Ps By Paul Sebastian For Men" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>68% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M9zkhL">Ps By Paul Sebastian For Men. Aftershave 4.0 Oz. </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.39</span><span class="ori_price">$42.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M9zkhL">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WlgoQZ"><img src="https://m.media-amazon.com/images/I/815MJ8oKewL._AC_UL320_.jpg" alt="Vornado Zippi Personal Fan, Ice" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WlgoQZ">Vornado Zippi Personal Fan, Ice</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WlgoQZ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="24.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MhCmka"><img src="https://m.media-amazon.com/images/I/81wAL-GaBPL._AC_UL436_.jpg" alt="Slow Cookers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MhCmka">Crock-pot SCCPNCAA600-TAM Texas A&M 6 quart Cook and Carry Slow Cookers, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.50</span><span class="ori_price">$36.64</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MhCmka">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="64.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2M7zfLh"><img src="https://m.media-amazon.com/images/I/71+JdOvaZrL._AC_UL436_.jpg" alt="Microsoft Surface Go Signature Type Cover" /></a>
