--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,213 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="65" data-price="7.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YJBRQZ"><img src="https://m.media-amazon.com/images/I/61JalT46JcL._SR400,400_.jpg" alt="Water Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YJBRQZ">CIOR Water Shoes Men Women Aqua Shoes Barefoot Quick-Dry Swim Shoes Boating Walking Driving Beach Yoga</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.69</span><span class="ori_price">$21.99</span></address>
+      <p><span>Take <strong>65% off at $21.99</strong> with promo code: <strong>65XYEENH</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2YJBRQZ">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="48.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2M8ThFt"><img src="https://m.media-amazon.com/images/I/81M5d4T0ikL._SR400,400_.jpg" alt="TOPVISION WiFi FPV Drone" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2M8ThFt">TOPVISION WiFi FPV Drone with 720P HD Camera & 480P Bottom Camera Wide-Angle Live Video RC Quadcopter </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$48.99</span><span class="ori_price">$69.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $69.99</strong> with promo code: <strong>30DYOWIH</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2M8ThFt">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="12.33">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EvRxjc"><img src="https://m.media-amazon.com/images/I/61l+EAFpUvL._SR400,400_.jpg" alt="Water Shoes" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EvRxjc">Ginjang Men Women Water Shoes Barefoot Quick Dry for Yoga Swim Diving Surf Aqua Sports Beach Walking</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.33</span><span class="ori_price">$18.98</span></address>
+      <p><span>Take <strong>35% off at $18.98</strong> with promo code: <strong>35L7XBTT</strong></span></p>
+      <span class="ex_date">Expiration Date : May 24, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EvRxjc">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="44.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WiklG4"><img src="https://m.media-amazon.com/images/I/71OQgtq5l1L._SR400,400_.jpg" alt="RENPHO Air Purifier for Allergies and Pets" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WiklG4">RENPHO Air Purifier for Allergies and Pets, Desktop Air Purifier with True HEPA Filter, Air Cleaner for Smokers Bedroom Office Child Room</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$44.09</span><span class="ori_price">$89.99</span></address>
+      <p><span>Take <strong>51% off at $89.99</strong> with promo code: <strong>51SPX1BG</strong></span></p>
+      <span class="ex_date">Expiration Date : May 26, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WiklG4">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="7.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WlH0kW"><img src="https://m.media-amazon.com/images/I/816CXdv9uWL._SR400,400_.jpg" alt="Ylife 33Ft 100 LED Fairy Light" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WlH0kW">Ylife 33Ft 100 LED Fairy Light, 8 Modes String Lights Waterproof, USB Interface Remote Control, Decorative Copper Wire Mini Lights</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>40% off at $12.99</strong> with promo code: <strong>407DITPU</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 22, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WlH0kW">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="47.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqqC2r"><img src="https://m.media-amazon.com/images/I/61lPHKegOcL._SR400,400_.jpg" alt="Wooden Table" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqqC2r">LANGRIA Bedside Table Nightstand End Table with Fabric Storage Drawer Pine Wooden Table</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$47.99</span><span class="ori_price">$59.99</span></address>
+      <p><span>Take <strong>20% off at $59.99</strong> with promo code: <strong>20PZW1JX</strong></span></p>
+      <span class="ex_date">Expiration Date : May 27, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqqC2r">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="3.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2W7OXeg"><img src="https://m.media-amazon.com/images/I/71Cm0HlrooL._SR400,400_.jpg" alt="Elastic No Tie Shoelaces" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2W7OXeg">Elastic No Tie Shoelaces - No Tie Laces With Reflective Shoe String for Sneakers, kids and adults</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.74</span><span class="ori_price">$7.48</span></address>
+      <p><span>Take <strong>50% off at $7.48</strong> with promo code: <strong>50V5PKHJ</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2W7OXeg">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="71.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ErBR0b"><img src="https://m.media-amazon.com/images/I/61a8NT5lz1L._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ErBR0b">3-Axis Gimbal Stabilizer for iPhone X XR XS Smartphone Vlog Youtuber Live Video Record with Sport Inception Mode Face Object Tracking Motion...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$71.20</span><span class="ori_price">$89.00</span></address>
+      <p><span>Take <strong>20% off at $89.00</strong> with promo code: <strong>20OFFHOHEM</strong></span></p>
+      <span class="ex_date">Expiration Date : May 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ErBR0b">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K2IbiD"><img src="https://images-na.ssl-images-amazon.com/images/I/512y4pwByaL._SX679_.jpg" alt="Htterino Projection Alarm Clock" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K2IbiD">Htterino Projection Alarm Clock Bluetooth Speaker with Wireless Charging DIY Ringtone,One-Click Snooze,Bluetooth Call Speaker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.99</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>50% off at $49.99</strong> with promo code: <strong>promo_code</strong></span></p>
+      <span class="ex_date">Expiration Date : End_date</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K2IbiD">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="12.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JYGC50"><img src="https://m.media-amazon.com/images/I/61QtxEu2TzL._SR400,400_.jpg" alt="Simple Drink BPA Free Metal Insulated Water Bottle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JYGC50">Simple Drink BPA Free Metal Insulated Water Bottle | Reusable Stainless Steel Flask with Portable Strong Cap for Sports Travel, Leak Proof</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.59</span><span class="ori_price">$20.99</span></address>
+      <p><span>Take <strong>40% off at $20.99</strong> with promo code: <strong>40YA6CF1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JYGC50">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="19.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2M5smu3"><img src="https://m.media-amazon.com/images/I/612ag0xtR9L._SR400,400_.jpg" alt="TopOne Aptx Low Latency Audio Transmitter" /></a>
