--- a/app/views/blogs/_body.html.erb
+++ b/app/views/blogs/_body.html.erb
@@ -27,7 +27,7 @@
     <a href="/blogs/blog_03"><img src="https://images.unsplash.com/photo-1464660756002-dd9f9a92b01b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1034&q=80" alt="Memorial Day Deals" /></a>
   </div>
   <div class="inner">
-    <h3><a href="#n">The best Memorial Day sales guide 2019</a></h3>
+    <h3><a href="/blogs/blog_03">The best Memorial Day sales guide 2019</a></h3>
     <p>Memorial Day is one of the biggest holidays for big sales. Each year, retail stores offer massive discounts on mattresses, appliances and much more.</p>
     <div class="more_btn">
       <a href="/blogs/blog_03">See more detail<img src="<%=asset_path 'direction_right.png' %>" alt="" /></a>
