--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -16,6 +16,139 @@
   </div>
 </div> -->
 
+<!-- <div class="tooltip_orange">
+  <span>Double Discount</span>
+  <div class="tooltip-content">
+    <p>You can get extra discount width coupon</p>
+  </div>
+</div> -->
+
+<div class="card clearfix" data-score="81" data-price="11.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K4aFIJ"><img src="https://m.media-amazon.com/images/I/619zPwpoIvL._AC_UL436_.jpg" alt="SanDisk" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>81% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K4aFIJ">SanDisk 64GB Ultra SDXC UHS-I Memory Card SDSDUNC-064G-GN6IN</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.47</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K4aFIJ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="76" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WooPL9"><img src="https://m.media-amazon.com/images/I/71zxttp6QTL._AC_UL436_.jpg" alt="Circle with Disney" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>76% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WooPL9">Circle with Disney (1st Gen) - In-Home Parental Controls for Wi-Fi Connected Devices</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.99</span><span class="ori_price">$99.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WooPL9">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="73" data-price="63.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K6qtKQ"><img src="https://m.media-amazon.com/images/I/51BrHlnB8jL._AC_UL436_.jpg" alt="HP C SSD 2AP99AAABL 512GB" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>73% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K6qtKQ">HP C SSD 2AP99AAABL 512GB S700 Pro Series 2.5 inch Retail 2AP99AA#ABL</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$63.99</span><span class="ori_price">$237.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K6qtKQ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Qo7sVD"><img src="https://m.media-amazon.com/images/I/61-H8NmkaXL._AC_UL436_.jpg" alt="Fire 7 Tablet" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Qo7sVD">Fire 7 Tablet (7" display, 8 GB) - Black - (Previous Generation - 7th)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Qo7sVD">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MabG4M"><img src="https://m.media-amazon.com/images/I/41Y2dfI6K1L._AC_UL436_.jpg" alt="Apple EarPods" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MabG4M">Apple EarPods with Lightning Connector - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$20.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MabG4M">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="56.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2K3KMc0"><img src="https://m.media-amazon.com/images/I/51R2a9p-vNL._AC_UL436_.jpg" alt="TP-Link AC1750 Smart WiFi Router" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2K3KMc0">TP-Link AC1750 Smart WiFi Router - Dual Band Gigabit Wireless Internet Routers for Home, Works with Alexa, VPN Server, Parental Control&QoS</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$56.99</span><span class="ori_price">$79.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2K3KMc0">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2QoNlGN"><img src="https://m.media-amazon.com/images/I/81YtozY6oRL._AC_UL436_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2QoNlGN">Logitech MK270 Wireless Keyboard and Mouse Combo - Keyboard and Mouse Included, 2.4GHz Dropout-Free...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2QoNlGN">Shop Now</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2EACBjI"><img src="https://images-na.ssl-images-amazon.com/images/I/61eTBqoXxaL._SX679_.jpg" alt="Smart LED TV" /></a>
@@ -31,6 +164,157 @@
   </div> 
   <div class="deal_btn">
     <a target="_blank" href="https://amzn.to/2EACBjI">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VQv2LC"><img src="https://m.media-amazon.com/images/I/71rNukm7FOL._AC_UL436_.jpg" alt="Babycakes Mini Cake Pop Maker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VQv2LC">Babycakes Mini Cake Pop Maker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_orange">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount width coupon</p>
+          </div>
+        </div>
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VQv2LC">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="49" data-price="33.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VTmKmm"><img src="https://m.media-amazon.com/images/I/71HXnd8eB9L._AC_UL436_.jpg" alt="Popper Machine" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>49% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2VTmKmm">West Bend 8231 Stir Crazy Deluxe Electric Hot Oil Popcorn Popper Machine with Removable Heating Plate</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$33.99</span><span class="ori_price">$66.81</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VTmKmm">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="42.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2EBGHYZ"><img src="https://m.media-amazon.com/images/I/61SJlbNXhKL._AC_UL436_.jpg" alt="Electric Fondue Maker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2EBGHYZ">Cuisinart Electric Fondue Maker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$42.99</span><span class="ori_price">$110.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2EBGHYZ">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MbVLCR"><img src="https://m.media-amazon.com/images/I/615+7HpnhmL._AC_UL436_.jpg" alt="Mickey Mouse Toaster" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MbVLCR">Disney DCM-21 Mickey Mouse 2 Slice Toaster</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.89</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MbVLCR">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="99.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MafuTk"><img src="https://m.media-amazon.com/images/I/613d9vEggjL._AC_UL436_.jpg" alt="Cordless Vacuum Kit" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MafuTk">Makita XLC02R1B 18V LXT Lithium-Ion Compact Cordless Vacuum Kit (2.0Ah)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.00</span><span class="ori_price">$169.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MafuTk">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="99.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WrDs0k"><img src="https://m.media-amazon.com/images/I/71V7Isa341L._AC_UL436_.jpg" alt="Carpet Deep Cleaner" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WrDs0k">Hoover Max Extract 60 Pressure Pro Carpet Deep Cleaner</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$99.00</span><span class="ori_price">$229.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WrDs0k">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MbgvL8"><img src="https://m.media-amazon.com/images/I/815MJ8oKewL._AC_UL436_.jpg" alt="Personal Fan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MbgvL8">Vornado Zippi Personal Fan, Ice</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2MbgvL8">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="59" data-price="30.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2wlNe5K"><img src="https://m.media-amazon.com/images/I/71gwz5ulaVL._AC_UL436_.jpg" alt="Wine Opener" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2wlNe5K">Cuisinart CWO-50 086279096395 Cordless Wine Opener with Vacuum Sealer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$30.99</span><span class="ori_price">$75.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2wlNe5K">Shop Now</a>
   </div>
 </div>
 
